# apexmaxxing

./: .gitignore  Justfile  readme.md
DS18B20 to Raspberry/: Sensori.kicad_pcb  Sensori.kicad_prl  Sensori.kicad_pro
DS18B20_to_Raspberry/: Sensori.kicad_sch  Sensori.net
balloon/: Cargo.toml
balloon/src/: main.rs
game-backend/: Cargo.toml
game-backend/src/: main.rs  state.rs  websockets.rs
game-frontend/: .gitignore  package.json
game-frontend/src/lib/: Scene.svelte  config.js  materials.js  networkStore.js  noise.js  player.js  terrain.js  threeCore.js
game-frontend/src/routes/: +page.svelte
image-compression/: Cargo.toml
image-compression/src/: main.rs
