[package]
name = "apex-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
futures = "0.3.31"
headers = "0.4.0"
sqlx = "0.8.5"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.26.2"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
